# location_manager

./: CMakeLists.txt  README.md  package.xml
src/: locationMgr_client.cpp  locationMgr_service.cpp
srv/: queryAllLocation.srv
